Made a few different fixes` 1. Body font to a variable and update chat to contain 2. also fix input container font-size 3. Loading page on mobile width fix 4. Size of profile page name if tex t width is small

--- a/botornot/imports/ui/pages/ProfilePage.less
+++ b/botornot/imports/ui/pages/ProfilePage.less
@@ -17,6 +17,11 @@
     color: @fg;
     font-size: 30px;
 }
+@media(max-width: 350px) {
+    .profile-username {
+        font-size: 27px;
+    }
+}
 .profile {
     font-family: 'Futura-Normal', arial;
     font-size: 20px;
